force-app/main/default/staticresources/python/Disappear/src/objects/ContactDelegate__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Delegates (Delegated To)</relationshipLabel>
        <relationshipName>ContactDelegatedTo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Delegate To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Delegates (Delegated By)</relationshipLabel>
        <relationshipName>ContactDelegatedBy1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Contact Delegate</label>
    <nameField>
        <displayFormat>CDEL-{0000000}</displayFormat>
        <label>ContactDelegate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Delegates</pluralLabel>
    <recordTypes>
        <fullName>PubReviewDelegate</fullName>
        <active>true</active>
        <label>Pub Review Delegate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>